2001-05-07  Almer S. Tigelaar  <almer@gnome.org>
    
    	* src/parser.y (gnumeric_expr_parser): Display which
    	token caused the parse error. And display more detailed
    	error messages for paren matching errors using
    	check_parens.
   	(find_matching_close): Utility function for paren matching.
    	(check_parens): Renamed from find_bracket. Replace bracket
    	with paren everywhere for consistency.
    	(yylex): Kill paren matching here.
 
2001-05-07  Morten Welinder  <terra@diku.dk>

	* src/item-grid.c (drag_start): Plug leak.

	* src/plugin.c (plugin_info_read): Fix truck-size leak.
	(plugin_file_state_from_string): Plug leak.

2001-05-07  Zbigniew Chyla  <cyba@gnome.pl>

	Improved plugin system performance & scalability:
	- reading plugin information from file only if necessary
	  (usually when activating a plugin)
	- some minor optimizations (using hashes instead of lists, etc.)

	* src/Makefile.am
	(GNUMERIC_BASE_SOURCES): Sorted some items.

	* src/gutils.h (g_list_to_vector_custom): New macro.

	* src/plugin.c:
	Made some functions static.
	s/plugin_loader_get_by_id/plugin_loader_get_type_by_id/
	(struct _PluginInfo): Added has_full_info field.
	(get_file_state_as_string, plugin_file_state_as_string,
	plugin_file_state_from_string, plugin_file_state_free,
	plugin_cache_init, plugin_cache_shutdown):
	New functions, support for caching information about plugin ids
	stored in XML files (together with modification dates).
	(plugin_info_read_full_info_if_needed_error_info,
	plugin_info_read_full_info_if_needed): New functions loading missing
	plugin information from file if necessary.
	(plugin_info_read):
	Use existing PluginInfo struct rather than creating a new one,
	take XML file name (not parsed XML tree) as an argument.
	(plugin_info_new_from_xml):
	New function, creates new PluginInfo struct from XML file (using
	plugin_info_read).
	(plugin_info_new_with_id_and_dir_name_only):